# newapp

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml  main.yml
android/: build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/newapp/pos/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
lib/: main.dart
lib/db/: database_helper.dart
lib/models/: pricing_rule.dart  product.dart  sale.dart
lib/screens/: backup_screen.dart  cart_screen.dart  home_screen.dart  password_screen.dart  product_form_screen.dart  products_screen.dart  revenue_screen.dart  rule_editor_screen.dart  scanner_screen.dart  settings_screen.dart
lib/services/: cart_manager.dart
rust_backend/: Cargo.toml
rust_backend/src/: database.rs  lib.rs  models.rs  pricing.rs  stats.rs
