[package]
name = "newapp_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "newapp_backend"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
zip = "0.6"
csv = "1.3"
